<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="50dp">

        <EditText
            android:id="@+id/registerFirstName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/firstName" />

        <EditText
            android:id="@+id/registerLastName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/lastName" />

        <EditText
            android:id="@+id/registerUsername"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/usernameHint" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password" />


        <Button
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/uploadPicture"></Button>

        <ImageView
            android:id="@+id/registerImage"
            android:layout_height="0dp"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerButton"></Button>

        <TextView
            android:id="@+id/registerError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>