<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="50dp">

        <EditText
            android:id="@+id/loginUsername"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/usernameHint" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"></Button>

        <TextView
            android:id="@+id/loginError"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>