<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/statusImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/userImageContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/statusName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="@string/sampleUserName" />

                    <Space
                        android:layout_width="3sp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/statusDot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statusDash" />

                    <Space
                        android:layout_width="3sp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/statusAlias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/sampleAlias" />
                </LinearLayout>

                <TextView
                    android:id="@+id/statusDatetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sampleAlias" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/statusPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sampleAlias" />

    </LinearLayout>

</RelativeLayout>



